Dev Org/src/objects/Section_Question__c.object
<CustomObject>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Section-Questions</relationshipLabel>
        <relationshipName>Section_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Section-Questions</relationshipLabel>
        <relationshipName>Section_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Root__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root</label>
        <referenceTo>Section_Question__c</referenceTo>
        <relationshipLabel>Section-Questions</relationshipLabel>
        <relationshipName>Section_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Section-Questions</relationshipLabel>
        <relationshipName>Section_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Section-Question</label>
    <nameField>
        <label>Section-Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Section-Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>